# pygaeb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  mkdocs.yml  pyproject.toml  tender.json
.github/workflows/: publish.yml  test.yml
docs/: changelog.md  index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: builder.md  caching.md  classification.md  conversion.md  cost-phases.md  custom-tags.md  document-diff.md  excel-export.md  extensibility.md  extraction.md  index.md  parsing.md  quantity-phases.md  trade-phases.md  tree-navigation.md  validation.md  writing.md
docs/reference/: boq-tree.md  builder.md  cache.md  classifier.md  config.md  converter.md  document-api.md  document-diff.md  excel-export.md  exceptions.md  extractor.md  index.md  models.md  parser.md  validation.md  writer.md
pygaeb/: __init__.py  async_api.py  bid_analysis.py  builder.py  cache.py  cli.py  config.py  converter.py  events.py  exceptions.py  quality.py  transition.py  units.py
pygaeb/api/: __init__.py  boq_tree.py  document_api.py
pygaeb/classifier/: __init__.py  batch_classifier.py  cache.py  confidence.py  llm_backend.py  prompt_templates.py  result_model.py  taxonomy.py
pygaeb/convert/: __init__.py  to_csv.py  to_database.py  to_excel.py  to_json.py  to_pdf.py  to_xrechnung.py
pygaeb/detector/: __init__.py  encoding_repair.py  format_detector.py  version_detector.py
pygaeb/diff/: __init__.py  boq_diff.py  exports.py  field_comparator.py  item_matcher.py  models.py  structure_diff.py
pygaeb/extractor/: __init__.py  builtin_schemas.py  extraction_cache.py  extraction_prompt.py  schema_utils.py  structured_extractor.py
pygaeb/models/: __init__.py  base_item.py  boq.py  catalog.py  cost.py  document.py  enums.py  item.py  order.py  quantity.py
pygaeb/parser/: __init__.py  _xml_safety.py  gaeb_parser.py  reb_parser.py  recovery.py
pygaeb/schemas/: README.md
pygaeb/validation/: __init__.py  cross_phase_validator.py  item_validator.py  numeric_validator.py  phase_validator.py  structural_validator.py  totals_validator.py
tests/: conftest.py  test_api.py  test_bid_analysis.py  test_boq_tree.py  test_builder.py  test_cache.py  test_classifier.py  test_cli.py  test_converter.py  test_cost_support.py  test_coverage_boost.py  test_detector.py  test_diff.py  test_excel_export.py  test_extensibility.py  test_extractor.py  test_findings_v141.py  test_gap_fixes.py  test_models.py  test_new_features.py  test_oz_resolver.py  test_parser.py  test_procurement_gaps_v150.py  test_procurement_parser_gaps.py  test_qty_support.py  test_review_fixes.py  test_security_hardening.py  test_tier23_features.py  test_trade_parser.py  test_validation.py  test_writer.py
(+19 files in other folders)
